--- a/src/Components/Button.scss
+++ b/src/Components/Button.scss
@@ -1,5 +1,16 @@
 $blue: #228be6; //주석!!!
+$gray: #495057;
+$pink: #f06595;
 
+@mixin button-color($color) {
+  background: $color;
+  &:hover {
+    background: lighten($color, 10%);
+  }
+  &:active {
+    background: darken($color, 10%);
+  }
+}
 .Button {
   display: inline-flex;
   align-items: center;
@@ -14,12 +25,37 @@ $blue: #228be6; //주석!!!
   padding-left: 1rem;
   padding-right: 1rem;
   font-size: 1rem;
-
-  background: $blue;
-  &:hover {
-    background: lighten($blue, 10%);
+  padding-left: 1rem;
+  padding-right: 1rem;
+  //size
+  &.large {
+    height: 3rem;
+    font-size: 1.25rem;
   }
-  &:active {
-    background: darken($blue, 10%);
+  &.medium {
+    height: 2.25rem;
+    font-size: 1rem;
+  }
+  &.small {
+    height: 1.75rem;
+    font-size: 0.875rem;
+  }
+
+  &.blue {
+    @include button-color($blue);
+  }
+  &.gray {
+    @include button-color($gray);
+  }
+  &.pink {
+    @include button-color($pink);
+  }
+
+  & + & {
+    margin-left: 1rem;
   }
 }
+
+// .Button + .Button {
+//   margin-left: 1rem;
+// }
